# rusty

./: Cargo.toml
src/: main.rs
src/dynamo_db/: mod.rs
src/mysql/: mod.rs
